Same issue, SASS doesnt like the colors

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "Olu Fadipe",
   "version": "1.0.0",
   "description": "A vue.js webpack config file for non single page applications",
   "main": "index.html",
