--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack": "^3.9.1"
   },
   "dependencies": {
+    "animate.css": "^3.6.1",
     "lowdash": "^1.1.0",
     "vue": "^2.5.9"
   }
