Installed Scroll Magic, going try it instead of CSS Animate

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "animate.css": "^3.6.1",
     "lowdash": "^1.1.0",
+    "scrollmagic": "^2.0.5",
     "vue": "^2.5.9"
   }
 }
