--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "animate.css": "^3.6.1",
     "lowdash": "^1.2.0",
     "scrollmagic": "^2.0.5",
-    "vue": "^2.5.16",
-    "vue2-animate": "^1.0.4"
+    "vue": "^2.5.16"
   }
 }
